--- a/Stylesheet/Main.css
+++ b/Stylesheet/Main.css
@@ -1,6 +1,11 @@
 h1{
     color: black;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+body{
+    background-color: cornflowerblue;
 }
 
 p{
@@ -20,3 +25,5 @@ h2{
     padding-left: 20px;
     padding-right: 20px;
 }
+
+
