--- a/Stylesheet/Aboutus.css
+++ b/Stylesheet/Aboutus.css
@@ -1,29 +1,21 @@
-h1{
-    color: black;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
 body{
-    background-color: cornflowerblue;
-}
+     background-color: cornflowerblue;
+     font-family: Arial, sans-serif;
+     margin: 20px;
+    }
 
-p{
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-img{
+footer{
+    background-color: grey;
     padding: 20px;
 }
 
-nav{
-    padding: 20px;
-}
-
-h2{
-    padding-left: 20px;
-    padding-right: 20px;
+a{
+    display: inline-block;
+    padding: 10px 15px;
+    background-color: brown;
+    color: black;
+    border-radius: 5px;
+    text-decoration: none;
 }
 
 
